Fixed most spacing issues. Mostly corrected Context Mode behavour, but still a little more to do.

--- a/data/docked_group_box_border_dark.css
+++ b/data/docked_group_box_border_dark.css
@@ -7,4 +7,4 @@ QGroupBox{background-color: transparent;
     
 QGroupBox:title {
     subcontrol-position: top middle; 
-    padding: 6px 0px 0px 3px;}
+    padding: 2px 0px 0px 3px;}
